test/compilable/extra-files/test3541c.d
module foo.test3541c;

void main()
{
}
